git-r-done
